--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.6",
     "ejs-mate": "^2.3.0",
     "express": "^4.14.1",
-    "express-session": "^1.15.1"
+    "express-session": "^1.15.1",
+    "mongoose": "^4.8.4"
   }
 }
