--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "ejs-mate": "^2.3.0",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
-    "mongoose": "^4.8.4"
+    "mongoose": "^4.8.4",
+    "passport": "^0.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
